# zonebar

./: LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: production-release-process.md  releasing.md
scripts/: generate-timezone-aliases.mjs  release-macos-local.sh
src/: App.css  App.tsx  BarApp.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  license.rs
src/components/: ActivationScreen.tsx  AddZone.tsx  DayNightBar.tsx  TimeDisplay.tsx  TimeSlider.tsx  ZoneRow.tsx
src/data/: generated-timezone-aliases.ts  timezone-overrides.json  timezones.ts
src/hooks/: useLicenseGate.ts  useTimezones.ts
src/lib/: license.ts
